@@ -1,5 +1,9 @@
 CHANGES:
 
+13/5/2014
+- add code to create embedded spreadsheet
+- AppleWorks/ClarisWorks: send page's embedded spreadsheets as spreadsheet (instead of table) 
+
 16/3/2014
 - GreatWorks: add a database parser which uses spreadsheet interface
 
